[package]
name = "cpu-stress-test"
version = "1.0.0"
edition = "2018"
description = "A CPU stresstest, fully saturating CPU resources"
repository = "https://github.com/Schmensch/rust-stress-test/"
license = "LGPL-3.0"
keywords = ["stresstest"]
categories = ["command-line-utilities"]
include = ["src/**/*", "Cargo.toml"]

[dependencies]
num_cpus = "1.13.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
